--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ words_per_minute         : 200
 # Site Author
 author:
   name             : "Tadek Kosmal"
-  avatar           : "/assets/images/avatar.jpg"
+  avatar           : "/assets/images/tadekk.jpg"
   bio              : "PhD. Student  @ Virginia Tech \n\n"
   location         : "Blacksburg, VA"
   email            : "tadekk@vt.edu"
